--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <html> 
   <head>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap">
     <title>Cheat Sheet</title> 
   </head>
 
   <body> 
     <h1>HTML Table Reference</h1> 
     <h2>Table Tags</h2>
-<table>
-  <thead> 
-    <tr>
-      <th>Tag</th>
-      <th>Name</th>
-      <th>Description</th>
-    </tr>
-  </thead>
+    <table>
+      <thead> 
+        <tr>
+          <th>Tag</th>
+          <th>Name</th>
+          <th>Description</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <tr>
-      <td><span class="col1 code">&lt;table&gt;</td>
-      <td class="col2">Table</td>
-      <td class="col3">Description</td>
-    </tr>
-    <tr>
-      <td><span class="col1 code">&lt;thead&gt;</td>
-      <td class="col2">Table Header</td>
-      <td class="col3">Description</td>
-    </tr>
-    <tr>
-      <td><span class="col1 code">&lt;tbody&gt;</td>
-      <td class="col2">Table Body</td>
-      <td class="col3">Description</td>
-    </tr>
-    <tr>
-      <td><span class="col1 code">&lt;tr&gt;</td>
-      <td class="col2">Table Row</td>
-      <td class="col3">Description</td>
-    </tr>
-    <tr>
-      <td><span class="col1 code">&lt;td&gt;</td>
-      <td class="col2">Table Data</td>
-      <td class="col3">Description</td>
-    </tr>
-    <tr>
-      <td><span class="col1 code">&lt;tfoot&gt;</td>
-      <td class="col2">Table Footer</td>
-      <td class="col3">Description</td>
-    </tr>
-  </tbody>
-</table>
-
+      <tbody>
+        <tr>
+          <td><span class="col1 code">&lt;table&gt;</td>
+          <td class="col2">Table</td>
+          <td class="col3">Description</td>
+        </tr>
+        <tr>
+          <td><span class="col1 code">&lt;thead&gt;</td>
+          <td class="col2">Table Header</td>
+          <td class="col3">Description</td>
+        </tr>
+        <tr>
+          <td><span class="col1 code">&lt;tbody&gt;</td>
+          <td class="col2">Table Body</td>
+          <td class="col3">Description</td>
+        </tr>
+        <tr>
+          <td><span class="col1 code">&lt;tr&gt;</td>
+          <td class="col2">Table Row</td>
+          <td class="col3">Description</td>
+        </tr>
+        <tr>
+          <td><span class="col1 code">&lt;td&gt;</td>
+          <td class="col2">Table Data</td>
+          <td class="col3">Description</td>
+        </tr>
+        <tr>
+          <td><span class="col1 code">&lt;tfoot&gt;</td>
+          <td class="col2">Table Footer</td>
+          <td class="col3">Description</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
